# comfyui-prompt-control

./: .gitignore  0001-Limit-batch-chunk-size-to-2.patch  Makefile  README.md  __init__.py  example.json  nodes.py  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  run_tests.yml  tests.yml  tests_with_comfy.yml
doc/: attention_couple.md  basic.md  legacy.md  macros.md  regional_prompts.md  schedule.md  schedules.md  syntax.md
example_workflows/: Basic Text to Image.json  Workflow Comparison.json
prompt_control/: adv_encode.py  adv_encode_old.py  anima_couple.py  attention_couple_ppm.py  cache_hack.py  cutoff.py  cutoff_parser.py  hijack.py  macros.py  manual_test.py  node_aio.py  node_clip.py  node_hooks.py  node_lora.py  node_other.py  nodes.py  nodes_anima.py  nodes_attnmask.py  nodes_base.py  nodes_hooks.py  nodes_lazy.py  nodes_other.py  nodes_schedule.py  nodes_tools.py  parser.py  parser_lark.py  parser_parsy.py  parsy.py  perp_weight.py  prompts.py  test.py  test_encode.py  test_encode_refactor.py  test_encode_t5.py  test_graph.py  test_parser.py  utils.py
prompt_control/legacy/: hijack.py  node_aio.py  node_clip.py  node_lora.py  node_other.py  utils.py
tests/: conftest.py  test_cutout.py  test_encode.py  test_graph.py  test_parser.py  test_workflow.json  test_workflow.py
tools/: expand_graph.py
web/docs/: PCAddMaskToCLIP.md  PCAddMaskToCLIPMany.md  PCAttentionCoupleBatchNegative.md  PCLazyLoraLoader.md  PCLazyLoraLoaderAdvanced.md  PCLazyTextEncode.md  PCLazyTextEncodeAdvanced.md  PCLoraHooksFromText.md  PCMacroExpand.md  PCSetPCTextEncodeSettings.md  PCTextEncode.md
workflows/: comparison.json  example-2pass.json  example-lazy.json  example.json
